--- a/.drone.yaml
+++ b/.drone.yaml
@@ -2,8 +2,6 @@ kind: pipeline
 type: kubernetes
 name: release_new_version
 
-# touch
-
 steps:
     -   name: push_to_nexus
         image: composer:2.1.12
@@ -15,8 +13,8 @@ steps:
             NEXUS_URL:
                 from_secret: NEXUS_URL
         commands:
-            - composer global require elendev/nexus-composer-push
-            - composer nexus-push --username=$$NEXUS_USERNAME --password=$$NEXUS_PASSWORD --url=$$NEXUS_URL ${DRONE_TAG##v}
+            - composer global require elendev/composer-push
+            - composer push --username=$$NEXUS_USERNAME --password=$$NEXUS_PASSWORD --url=$$NEXUS_URL ${DRONE_TAG##v}
         when:
             branch:
                 - master
